# alcor

./: .gitignore  README.md
benchmark/: Comparison.sh  SensitiveCassava.sh  alcor_unique.R  comparison.sh  fas_getlen.pl  repeatmasker_count_missing.pl  txt2bed.pl
cassava/: GetCassava.sh  GetPercentageAll.sh  GunzipCassava.sh  RunAdditionalTrace.sh  RunCassava.sh  positions-h1-10.txt  positions-h1-11.txt  positions-h1-12.txt  positions-h1-13.txt  positions-h1-14.txt  positions-h1-15.txt  positions-h1-16.txt  positions-h1-17.txt  positions-h1-18.txt  positions-h1-2.txt  positions-h1-3.txt  positions-h1-4.txt  positions-h1-5.txt  positions-h1-6.txt  positions-h1-8.txt  positions-h1-9.txt  positions-h2-1.txt  positions-h2-10.txt  positions-h2-11.txt  positions-h2-12.txt  positions-h2-13.txt  positions-h2-14.txt  positions-h2-15.txt  positions-h2-16.txt  positions-h2-17.txt  positions-h2-18.txt  positions-h2-2.txt  positions-h2-3.txt  positions-h2-4.txt  positions-h2-5.txt  positions-h2-6.txt  positions-h2-7.txt  positions-h2-8.txt  positions-h2-9.txt  ref.txt
herpesvirus/: EBV.fa  GetPercentage.sh  GetPercentageAll.sh  HCMV.fa  HHV6A.fa  HHV6B.fa  HHV7.fa  HSV-1.fa  HSV-2.fa  KSHV.fa  RunHerpesvirus.sh  VZV.fa
src/: CMakeLists.txt  Makefile  MakefileConda  RunSequence.sh  alcor.c  alphabet.c  alphabet.h  buffer.c  buffer.h  cache.c  cache.h  carray.c  carray.h  chash.c  chash.h  cm.c  cm.h  colors.h  common.c  common.h  defs.h  dist.c  dist.h  dna.c  dna.h  ex.c  ex.h  filter.c  filter.h  if.c  if.h  keys.c  keys.h  kmer.c  kmer.h  levels.c  levels.h  lr.c  lr.h  ma.c  (+30 more)
(+17 files in other folders)
